现在可监听文件变化, 制作qrcode

--- a/views/preview.hbs
+++ b/views/preview.hbs
@@ -15,5 +15,5 @@ const fetchPreview = () => {
 fetchPreview()
 let timer = 0
 clearInterval(timer)
-timer = setInterval(fetchPreview, 60000 * 3)
+timer = setInterval(fetchPreview, 30000)
 </script>
